--- a/style/viewport.css
+++ b/style/viewport.css
@@ -1,10 +1,12 @@
 canvas {
     display: block;
+    position: fixed;
     width: 100%;
     height: 100%;
 }
 
 body {
+    overflow: hidden;
     margin: 0;
     padding: 0;
 }
